--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="provide_feedback">Provide Feedback</string>
     <string name="contact_us">Contact us</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_test_map">Map</string>
 </resources>
